Commit antes de punteros
Hasta este momento no he usado punteros y es seguro usar el codigo

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,11 @@ Intermediate/
 Content/StarterContent/
 
 Saved/
+
+Content/InfinityBladeFireLands/
+
+Content/InfinityBladeWarriors/
+
+Content/ParagonShinbi/
+
+\.vs/
