--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,9 @@
 [URL]
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/StarterContent/Maps/Minimal_Default
-GameDefaultMap=/Game/StarterContent/Maps/Minimal_Default
-GlobalDefaultGameMode="/Script/proyectoUDemy1.proyectoUDemy1GameMode"
+EditorStartupMap=/Game/Maps/NewMap.NewMap
+GameDefaultMap=/Game/Maps/NewMap.NewMap
+GlobalDefaultGameMode=/Game/MyproyectoUDemy1GameModeBP.MyproyectoUDemy1GameModeBP_C
+GlobalDefaultServerGameMode=/Game/MyproyectoUDemy1GameModeBP.MyproyectoUDemy1GameModeBP_C
 
 [/Script/Engine.RendererSettings]
 r.MobileHDR=True
@@ -125,5 +126,3 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
-
-
